# LF2_Reproduce

./: CMakeLists.txt  README.md
Assets/: jiancai.py
include/: Actor.h  AnimSpriteComponent.h  BGSpriteComponent.h  Base.h  Component.h  Game.h  InputComponent.h  MoveComponent.h  Person.h  SpriteComponent.h
src/: Actor.cpp  AnimSpriteComponent.cpp  BGSpriteComponent.cpp  Component.cpp  Game.cpp  InputComponent.cpp  Main.cpp  MoveComponent.cpp  Person.cpp  SpriteComponent.cpp
